passGen: Implement build and release workflow for extension, update versioning script, and enhance README
- Added a GitHub Actions workflow for building and releasing the CyberKeyGen extension.
- Introduced a version management script to automate version updates in manifest.json.
- Updated package.json with new scripts for versioning and building the extension.
- Bumped extension version to 1.0.1 in manifest.json.
- Enhanced README to include version management instructions.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "build:extension": "mkdir -p dist && cd extension && zip -r ../dist/CyberKeyGen_extension.zip *",
+    "build:extension:versioned": "VERSION=$(grep '\"version\"' extension/manifest.json | sed -E 's/.*\"version\"[^\"]*\"([^\"]*)\",.*/\\1/') && mkdir -p dist && cd extension && zip -r ../dist/CyberKeyGen_${VERSION}.zip *",
+    "version:patch": "./update-extension-version.sh patch",
+    "version:minor": "./update-extension-version.sh minor",
+    "version:major": "./update-extension-version.sh major",
     "lint": "eslint .",
     "preview": "vite preview"
   },
