passGen: Update keyboard shortcuts in manifest and options page for clarity and consistency

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -36,13 +36,15 @@
   "commands": {
     "generate_password": {
       "suggested_key": {
-        "default": "Alt+Shift+G"
+        "default": "Alt+Shift+G",
+        "mac": "Alt+Shift+G"
       },
       "description": "Generate and fill a password"
     },
     "_execute_action": {
       "suggested_key": {
-        "default": "Alt+P"
+        "default": "Alt+P",
+        "mac": "Alt+P"
       },
       "description": "Open the password generator popup"
     }
